k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-developer-lab
spec:
  selector:
    app: backend-developer-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
