k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-developer-lab
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: backend-lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-developer-lab
                port:
                  number: 80
